--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.3",
     "mongoose": "~4.3.4",
     "express-jwt": "~3.3.0",
-    "jsonwebtoken": "~5.5.0"
+    "jsonwebtoken": "~5.5.0",
+    "coffee-script": "~1.10.0"
   }
 }
