--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "pdfkit": "~0.7.2",
     "body-parser": "~1.14.2",
     "express": "~4.13.3",
-    "mongoose": "~4.3.4",
     "express-jwt": "~3.3.0",
     "jsonwebtoken": "~5.5.0",
-    "coffee-script": "~1.10.0"
+    "coffee-script": "~1.10.0",
+    "cors": "~2.7.1",
+    "base64-stream": "~0.1.3"
   }
 }
